Assembler/tests/ok/constants/bytes.asm
someBytes: .byte 0x12,0x34,0x56
