Assembler/tests/bad/constants/bad_byte.asm
someBytes: .byte 0xFFF
